# audio-engine

./: CMakeLists.txt
include/: audioengine.h  testprocess.h
include/backends/: audiobackend.h  backendfactory.h  iaudiobackend.h
include/backends/linux/: alsabackend.h
include/backends/windows/: asiobackend.h  wasapibackend.h
include/common/: audiobuffer.h  audioconfig.h  audioexception.h  audioprocess.h  listener.h  ringbuffer.h
include/devices/: audiodevice.h
src/: audioengine.cpp  main.cpp  testprocess.cpp
src/backends/linux/: alsabackend.cpp
src/backends/windows/: wasapibackend.cpp
src/devices/: audiodevice.cpp
